# VerseForge

backend/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250320_initial_migration.py
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  character_agent.py  coherence_agent.py  constants.py  exceptions.py  manager.py  plot_agent.py  qa_agent.py  scene_agent.py  utils.py  writing_agent.py
backend/app/ai/: README.md  __init__.py  base.py  openai_adapter.py  prompts.py  utils.py
backend/app/ai/tests/: test_openai_adapter.py  test_utils.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api-docs.md  api.py
backend/app/api/api_v1/endpoints/: __init__.py  agents.py  auth.py  model_configs.py  novels.py  tasks.py  users.py
backend/app/core/: celery_app.py  config.py  database.py  events.py  security.py
backend/app/core/event_bus/: __init__.py  client.py  event_bus.py  kafka_event_bus.py  memory_event_bus.py  redis_event_bus.py  server.py
backend/app/crud/: __init__.py  agent.py  base.py  model_config.py  novel.py  user.py
backend/app/models/: __init__.py  agent.py  base.py  model_config.py  novel.py  user.py
backend/app/schemas/: __init__.py  agent.py  model_config.py  novel.py  token.py  user.py
backend/docs/: model-configuration.md
docs/: system-architecture.md
frontend/: .env  .env.production  .eslintrc.js  .gitignore  .prettierrc  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+21 files in other folders)
